// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createStyledAttrsMixin baseStyles should accept baseStyles as a function 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: var(--chakra-colors-blue-200);
  color: var(--chakra-colors-black);
  border: 2px solid #0045b4;
}

<div
    class="emotion-0"
    data-chakra-component="FakeComponent"
  >
    Fake component
  </div>
</DocumentFragment>
`;

exports[`createStyledAttrsMixin baseStyles should accept baseStyles as a function 2`] = `
<DocumentFragment>
  .emotion-0 {
  background: var(--chakra-colors-vue-200);
  color: var(--chakra-colors-white);
  border: 2px solid #7db1ff;
}

<div
    class="emotion-0"
    data-chakra-component="FakeComponent"
  >
    Fake component
  </div>
</DocumentFragment>
`;

exports[`createStyledAttrsMixin baseStyles should be overiden by props 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: var(--chakra-colors-blue-200);
  color: var(--chakra-colors-gray-200);
}

<div
    class="emotion-0"
    data-chakra-component="FakeComponent"
  >
    Fake component
  </div>
</DocumentFragment>
`;

exports[`createStyledAttrsMixin baseStyles should use theme.baseStyles if given 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: var(--chakra-colors-red-400);
  color: var(--chakra-colors-gray-200);
}

<div
    class="emotion-0"
    data-chakra-component="FakeComponent"
  >
    Fake component
  </div>
</DocumentFragment>
`;
